fixed shading on setup/stats toggle button, changed splash screen timing

--- a/avidaEdEco.css
+++ b/avidaEdEco.css
@@ -280,6 +280,9 @@ html {
   .activeBtn {
     background: #ccc;
   }
+  .restBtn {
+    background: #EFEFEF;
+  }
   
 /* headerRow contains leftPnlBtnHolder mainMenu headerMsg RtSideToggleButtons ritePnlBtnHolder */
 
